[package]
name = "globalapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.28", features = ["android-game-activity"]}
wgpu = "0.16.0"
pollster = "0.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[features]
default = []
desktop = []

[lib]
crate-type=["cdylib"]

[[bin]]
name="globalapp"
path="src/lib.rs"

##  [package.metadata.android]
##  package = "org.ggezandroid.example"
##  apk_name = "ggezandroid"
##  strip = "strip"
##  build_targets = ["aarch64-linux-android"]

##  [package.metadata.android.sdk]
##  target_sdk_version = 33
