[package]
name = "globalapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.28", features = ["android-game-activity"]}
wgpu = "0.16.0"
tokio = {version="1.43.0", features=["rt-multi-thread"]}

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[features]

[lib]
crate-type=["cdylib"]

[[bin]]
name="globalapp"
path="src/lib.rs"
